tests/neg-macros/wrong-owner/Test_2.scala
import scala.annotation.experimental

@experimental
@wrongOwner
class Foo // error
